# VIP

./: .codecov.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .test_durations  .travis.yml  LICENSE  Makefile  README.rst  license.rst  paper.bib  paper.md  pyproject.toml  readme.rst  readthedocs.yml  readthedocs_full_compilation_timeout_error.yml  requirements  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: auto_test.yml  ci.yml  draft-pdf.yml
data/: Tutorial.ipynb  naco_betapic.fits  psf.fits
docs/: Makefile  make.bat  requirements.txt
docs/source/: Attribution.rst  Contact.rst  Image-conventions.rst  Installation-and-dependencies.rst  TLDR.rst  about.rst  conf.py  faq.rst  gen_index.rst  index.rst  install.rst  modules.rst  package_structure.rst  readme.rst  trimmed_readme.rst  trimmed_readme_2.rst  trimmed_readme_3.rst  trimmed_readme_4.rst  trimmed_readme_5.rst  tuto_link.rst  tutos.rst  vip.calib.rst  vip.conf.rst  vip.exlib.ds9.rst  vip.exlib.rst  vip.fits.rst  vip.llsg.rst  vip.madi.rst  vip.negfc.rst  vip.nmf.rst  vip.pca.rst  vip.phot.rst  vip.rst  vip.stats.rst  vip.var.rst  vip_hci.andromeda.rst  vip_hci.conf.rst  vip_hci.config.rst  vip_hci.exlib.rst  vip_hci.fits.rst  (+24 more)
fm/: negfc_speckle_noise.py
greedy/: ipca_fullfr.py
helpers/: update_docs_rst_from_README.py
metrics/: contrcurve.py
paper/: test.md
src/vip_hci/: __init__.py
tests/: SPHERE_satspots_centered.fits  andromeda_idl.npz  conftest.py  helpers.py  test_andromeda.py  test_center.py  test_conf.py  test_contrcurve.py  test_dataset.py  test_fakecomp.py  test_filters.py  test_fm_fakecomp.py  test_fm_fakedisk.py  test_fm_negfc_3d.py  test_fm_negfc_4d.py  test_fm_scatteredlightdisk.py  test_hcidataset.py  test_metrics_completeness.py  test_metrics_contrcurve.py  test_metrics_detection.py  test_metrics_fakecomp.py  test_metrics_snr.py  test_metrics_stim.py  test_objects_postproc.py  test_objects_ppandromeda.py  test_objects_ppfmmf.py  test_objects_ppframediff.py  test_objects_ppllsg.py  test_objects_pploci.py  test_objects_ppmediansub.py  test_objects_ppnmf.py  test_objects_pppca.py  test_objects_ppresult.py  test_pca_svd.py  test_pipeline.py  test_pipeline_adi.py  test_pipeline_adi_andro.py  test_pipeline_adi_fmmf.py  test_pipeline_adi_invprob.py  test_pipeline_adi_paco.py  (+15 more)
tests/post_3_10/: test_objects_postproc.py  test_objects_ppandromeda.py  test_objects_ppfmmf.py  test_objects_ppframediff.py  test_objects_ppllsg.py  test_objects_pploci.py  test_objects_ppmediansub.py  test_objects_ppnmf.py  test_objects_pppca.py  test_objects_ppresult.py
tests/pre_3_10/: naco_betapic_single.fits  test_conf.py  test_dataset.py  test_fm_fakecomp.py  test_fm_fakedisk.py  test_fm_negfc_3d.py  test_fm_negfc_4d.py  test_fm_scatteredlightdisk.py  test_metrics_completeness.py  test_metrics_contrcurve.py  test_metrics_detection.py  test_metrics_snr.py  test_metrics_stim.py  test_pca_svd.py  test_pipeline_adi_paco.py  test_pipeline_rdi.py  test_pipeline_sdi.py  test_preproc_badframes.py  test_preproc_badpix.py  test_preproc_cosmetics.py  test_preproc_recentering.py  test_preproc_rescaling.py  test_preproc_rotation.py  test_var_filters.py  test_var_fit2d.py  test_var_shapes.py
tests/snapshots/: snapshot_invprob.py  snapshot_psfsub.py
tutorial/: Tutorial_VIP.ipynb
tutorial/.ipynb_checkpoints/: Tutorial_VIP-checkpoint.ipynb
vip/: VORTEX meeting agenda.txt  __init__.py
vip/calib/: __init__.py  badframes.py  badpixremoval.py  cosmetics.py  cosmetics_ifs.py  cosmetics_sdi.py  derotation.py  parangles.py  recentering.py  rescaling.py  skysubtraction.py  subsampling.py
vip/conf/: __init__.py  mem.py  param.py  timing.py  utils.py
vip/exlib/: __init__.py  ds9.py  ds9_getDirs.py  ds9_getMacDirs.py  ds9_getWinDirs.py
vip/fits/: ESO_header.py  __init__.py  fits.py  header.py  vipds9.py  vipds9_source.py
vip/llsg/: __init__.py  llsg.py  thresholding.py
vip/madi/: __init__.py  adi_source.py
vip/negfc/: __init__.py  func_merit.py  mcmc_opt.py  mcmc_sampling.py  nested_sampling.py  post_proc.py  simplex_fmerit.py  simplex_opt.py  simplex_optim.py  subt_planet.py  utils.py  utils_negfc.py
vip/nmf/: __init__.py  nmf_fullfr.py
vip/pca/: .#pca_local.py  __init__.py  pca_fullfr.py  pca_local.py  (+2 more)
vip_hci/: __init__.py  dataset.py  hci_cube.py  hci_dataset.py  hci_postproc.py  postproc.py  vip_ds9.py
vip_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+327 files in other folders)
