[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0.0"]

[project]
name = "vip_hci"
version = "1.6.6"
description = "Package for astronomical high-contrast image processing."
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Carlos Alberto Gomez Gonzalez" },
  { name = "Valentin Christiaens", email = "valentin.christiaens@uliege.be" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Astronomy",
]
urls.Homepage = "https://github.com/vortex-exoplanet/VIP"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "photutils",
    "scikit-learn",
    "scikit-image>=0.19.0",
    "emcee",
    "nestle",
    "corner",
    "pandas",
    "matplotlib>=3.7.0",
    "psutil",
    "pyprind",
    "munch",
    "hciplot>=0.2.4",
    "dataclass_builder",
]

[dependency-groups]
dev = [
    "build",
    "twine",
    "opencv-python",
    "sphinx",
    "myst-nb",
    "myst-parser",
    "pandoc",
    "pytest",
    "pytest-cov ~=2.6.0",
    "pytest-split",
    "flake8",
    "flake8-bandit",
    "flake8-docstrings",
    "autopep8",
    "ratelimit",
    "pre-commit",
    "nbsphinx",
    "sphinx_rtd_theme",
    "jupyter_sphinx",
]

[tool.setuptools]
zip-safe = false
packages.find = { namespaces = false }
