[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vip_hci"
version = "2.0.0"
description = "Package for astronomical high-contrast image processing."
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Carlos Alberto Gomez Gonzalez" },
  { name = "Valentin Christiaens", email = "valentin.christiaens@uliege.be" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
]
urls.Homepage = "https://github.com/vortex-exoplanet/VIP"
dependencies = [
    "astropy>=5.0.0",
    "corner>=2.2.1",
    "dataclass_builder>=1.2.0",
    "emcee>=3.1.0",
    "hciplot>=0.2.4",
    "matplotlib>=3.7.0",
    "nestle>=0.2.0",
    "numpy>=1.21.2",
    "pandas>=1.3.3",
    "photutils>=1.2.0",
    "psutil>=5.9.0",
    "pyprind>=2.11.3",
    "scipy>=1.7.2",
    "scikit-image>=0.19.0",
    "scikit-learn>=1.0.2",
]

[dependency-groups]
dev = [
    "coverage>=7.10.0",
    "build",
    "twine",
    "opencv-python",
    "sphinx",
    "myst-nb",
    "myst-parser",
    "pandoc",
    "pytest",
    "pytest-split",
    "flake8",
    "flake8-bandit",
    "flake8-docstrings",
    "autopep8",
    "ratelimit",
    "pre-commit",
    "nbsphinx",
    "sphinx_rtd_theme",
    "jupyter_sphinx",
]
